finished the components page

--- a/index.html
+++ b/index.html
@@ -93,41 +93,59 @@
       <h1>COMPONENTE</h1>
       <div id="components-container">
         <div id="components-list"></div>
-
+        <div id="shown-component"></div>
       </div>
     </div>
 
     <div id="components-list">
       <div id="processor" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908535.png" alt="" id="icon">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908535.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1613616631374-121ea711cc3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=500" alt="">
+        <p>Procesor (CPU - Unitate Centrală de Procesare): este un component esențial al calculatorului, care execută instrucțiunile software-ului și efectuează operații aritmetice și logice.</p>
       </div>
       <div id="motherboard" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908540.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908540.png" alt="">
+        <img  class="component-cover"src="https://images.pexels.com/photos/3520694/pexels-photo-3520694.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <p>Placa de bază (Motherboard): este placa de bază a sistemului, care conectează toate componentele calculatorului și asigură comunicarea dintre ele.</p>
+
       </div>
       <div id="memory" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908522.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908522.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1562976540-1502c2145186?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80" alt="">
+        <p>Memoria (RAM - Memorie de Acces Aleator): este un tip de memorie temporară, care stochează datele și programele utilizate în mod curent.</p>
       </div>
       <div id="storage" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908521.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908521.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1597852074816-d933c7d2b988?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="">
+        <p>Stocarea (hard drive sau solid state drive): este un dispozitiv de stocare a datelor, care salvează programele și fișierele permanent.</p>
       </div>
       <div id="psu" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908526.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908526.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1659856577105-c8ec1a364aa0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&h=600&q=80" alt="">
+        <p>Alimentatorul de putere (Power supply): este un component care transformă curentul alternativ în curent continuu și alimentează toate componentele calculatorului.</p>
       </div>
       <div id="gpu" class="component">
-        <!-- <img src="https://cdn-icons-png.flaticon.com/512/8900/8900415.png" alt=""> -->
-        <img src="https://cdn-icons-png.flaticon.com/512/1470/1470162.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/1470/1470162.png" alt="">
+        <img class="component-cover" src="https://images.pexels.com/photos/8622911/pexels-photo-8622911.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="">
+        <p>Placa grafică (GPU - Unitate de Procesare a Graficii): este un component care procesează informațiile grafice și afișează imagini pe ecran.</p>
       </div>
       <div id="cooling" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/4617/4617749.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4617/4617749.png" alt="">
+        <img class="component-cover" src="https://images.pexels.com/photos/3520696/pexels-photo-3520696.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <p>Sistemul de răcire: este necesar pentru a menține temperatura calculatorului la niveluri normale, evitând supraincalzirea.</p>
       </div>
       <div id="case" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/908/908593.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908593.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1660855551550-2696677aaf28?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&h=800&q=80" alt="">
+        <p>Carcasa: protejează componentele calculatorului și permite accesul la acestea pentru instalare sau întreținere.</p>
       </div>
       <div id="input" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/4011/4011563.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4011/4011563.png" alt="">
+        <img class="component-cover" src="https://images.unsplash.com/photo-1668395090641-1df332e3389f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
+        <p>Dispozitive de intrare/ieșire (tastatură, mouse, monitor, etc): permit utilizatorului să interacționeze cu calculatorul și să primească informații de la acesta.</p>
       </div>
       <div id="output" class="component">
-        <img src="https://cdn-icons-png.flaticon.com/512/6256/6256704.png" alt="">
+        <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/6256/6256704.png" alt="">
       </div>
     </div>
     <div id="future-page">
