adapted for lower resolutions

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
         <div id="year-nav-container">
           <div id="range-container">
-            <div>1600</div>
+            <p>1600</p>
             <input type="range" min="1600" max="2000" value="1822" id="slider" onchange="a()">
-            <div>2000 </div>
+            <p>2000 </p>
           </div>
           <div id="buttons-container">
             <button id="left" onclick="left()"><</button>
@@ -84,8 +84,8 @@
         <h2>UNIVAC I</h2>
         <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Fblog-media%2FHYGPU-102667576p-03-01.jpg&f=1&nofb=1&ipt=9064c3af8a179efdceacfd784ab914d75e990aa612fba09d72143fdd6c75323a&ipo=images&width=500&h=500" alt="">
       </div>
-      <div id="y1976">
-        <h2>APPLE I</h2>
+      <div id="y1981">
+        <h2>IBM PC</h2>
         <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Frevonline%2Fimages%2F102716228p-03-01.jpg%3Fw%3D600&f=1&nofb=1&ipt=d9ee6b30c5eab9bbee734cd9fa3b519c7e9c38c8902fe635ac7e2b2433b04b2f&ipo=images" alt="">
       </div>
     </div>
@@ -107,7 +107,6 @@
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908540.png" alt="">
         <img  class="component-cover"src="https://images.pexels.com/photos/3520694/pexels-photo-3520694.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <p>Placa de bază (Motherboard): este placa de bază a sistemului, care conectează toate componentele calculatorului și asigură comunicarea dintre ele.</p>
-
       </div>
       <div id="memory" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908522.png" alt="">
@@ -126,7 +125,7 @@
       </div>
       <div id="gpu" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/1470/1470162.png" alt="">
-        <img class="component-cover" src="https://images.pexels.com/photos/8622911/pexels-photo-8622911.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="">
+        <img class="component-cover" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.24htech.asia%2Fnews%2Fwp-content%2Fuploads%2F2022%2F05%2F20001009%2Fimage-nvidia-geforce-rtx-4090-ti-rtx-4090-graphics-card-specs-performance-price-availability-everything-we-know-so-far-165295500947685.png&f=1&nofb=1&ipt=e599f946195a0e9dd09d711a4ac71fc946de35549c84237c323588103a9d47a4&ipo=images" alt="">
         <p>Placa grafică (GPU - Unitate de Procesare a Graficii): este un component care procesează informațiile grafice și afișează imagini pe ecran.</p>
       </div>
       <div id="cooling" class="component">
