--- a/index.html
+++ b/index.html
@@ -38,90 +38,88 @@
     <div id="history-page">
       <h1>ISTORIE</h1>
       <div id="history-container">
-        <div class="container">
-          <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
-            <!-- Swiper -->
-            <div class="swiper swiper-container swiper-container--timeline">
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://p1.liveauctioneers.com/364/40452/17377272_6_l.jpg" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>Pascaline</h2>
-                    <p>Pascaline a fost una dintre primele mașini de calcul mecanice inventate de Blaise Pascal în 1642. Aceasta putea efectua operații aritmetice simple, cum ar fi adunarea și scăderea.</p>
-                  </div>
+        <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
+          <!-- Swiper -->
+          <div class="swiper swiper-container swiper-container--timeline">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://p1.liveauctioneers.com/364/40452/17377272_6_l.jpg" alt="">
+                </span>
+                <div class="title">
+                  <h2>Pascaline</h2>
+                  <p>Pascaline a fost una dintre primele mașini de calcul mecanice inventate de Blaise Pascal în 1642. Aceasta putea efectua operații aritmetice simple, cum ar fi adunarea și scăderea.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.britannica.com%2F31%2F172531-050-E009D42C%2Fportion-Charles-Babbage-Analytical-Engine-death-mill-1871.jpg&f=1&nofb=1&ipt=f91da7df5c87c0dc8e8d480910dbb7b339da5bbb0b0855a1350adbf4981a10cb&ipo=images" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>Analytical Engine</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.britannica.com%2F31%2F172531-050-E009D42C%2Fportion-Charles-Babbage-Analytical-Engine-death-mill-1871.jpg&f=1&nofb=1&ipt=f91da7df5c87c0dc8e8d480910dbb7b339da5bbb0b0855a1350adbf4981a10cb&ipo=images" alt="">
+                </span>
+                <div class="title">
+                  <h2>Analytical Engine</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://i.pinimg.com/736x/07/a4/eb/07a4eb6e6f189b270eabd026998d86ce--card-reader-information-technology.jpg" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>Masina de tabulare Holerith</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://i.pinimg.com/736x/07/a4/eb/07a4eb6e6f189b270eabd026998d86ce--card-reader-information-technology.jpg" alt="">
+                </span>
+                <div class="title">
+                  <h2>Masina de tabulare Holerith</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs3.amazonaws.com%2Fs3.timetoast.com%2Fpublic%2Fuploads%2Fphotos%2F7000355%2Fasd.jpg&f=1&nofb=1&ipt=d195aea9f310c92dbd8ee8b76ac4af408382e2e81b2af7d210bc4a613404d640&ipo=images" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>Atanasoff-Berry Computer</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs3.amazonaws.com%2Fs3.timetoast.com%2Fpublic%2Fuploads%2Fphotos%2F7000355%2Fasd.jpg&f=1&nofb=1&ipt=d195aea9f310c92dbd8ee8b76ac4af408382e2e81b2af7d210bc4a613404d640&ipo=images" alt="">
+                </span>
+                <div class="title">
+                  <h2>Atanasoff-Berry Computer</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-OP9T9mDVoKM%2FUrSLp-LILrI%2FAAAAAAAAAZQ%2FPO_Y1nVRK38%2Fs1600%2FVacTubeComputer.jpg&f=1&nofb=1&ipt=0d680303e15ab2d02ad9fdd1d81030742da8c49feae3fc9c525a069223769193&ipo=images" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>ENIAC</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-OP9T9mDVoKM%2FUrSLp-LILrI%2FAAAAAAAAAZQ%2FPO_Y1nVRK38%2Fs1600%2FVacTubeComputer.jpg&f=1&nofb=1&ipt=0d680303e15ab2d02ad9fdd1d81030742da8c49feae3fc9c525a069223769193&ipo=images" alt="">
+                </span>
+                <div class="title">
+                  <h2>ENIAC</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Fblog-media%2FHYGPU-102667576p-03-01.jpg&f=1&nofb=1&ipt=9064c3af8a179efdceacfd784ab914d75e990aa612fba09d72143fdd6c75323a&ipo=images&width=500&h=500" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>UNIVAC I</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Fblog-media%2FHYGPU-102667576p-03-01.jpg&f=1&nofb=1&ipt=9064c3af8a179efdceacfd784ab914d75e990aa612fba09d72143fdd6c75323a&ipo=images&width=500&h=500" alt="">
+                </span>
+                <div class="title">
+                  <h2>UNIVAC I</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
-                <div class="swiper-slide">
-                  <span class="title">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Frevonline%2Fimages%2F102716228p-03-01.jpg%3Fw%3D600&f=1&nofb=1&ipt=d9ee6b30c5eab9bbee734cd9fa3b519c7e9c38c8902fe635ac7e2b2433b04b2f&ipo=images" alt="">
-                  </span>
-                  <div class="title">
-                    <h2>IBM PC</h2>
-                    <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
-                  </div>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Frevonline%2Fimages%2F102716228p-03-01.jpg%3Fw%3D600&f=1&nofb=1&ipt=d9ee6b30c5eab9bbee734cd9fa3b519c7e9c38c8902fe635ac7e2b2433b04b2f&ipo=images" alt="">
+                </span>
+                <div class="title">
+                  <h2>IBM PC</h2>
+                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
                 </div>
               </div>
             </div>
-            <!-- Timeline -->
-            <ul class="swiper-pagination-custom">
-              <li class='swiper-pagination-switch first active'><span class='switch-title'>1642</span></li>
-              <li class='swiper-pagination-switch'><span class='switch-title'>1822</span></li>
-              <li class='swiper-pagination-switch'><span class='switch-title'>1888</span></li>
-              <li class='swiper-pagination-switch'><span class='switch-title'>1940</span></li>
-              <li class='swiper-pagination-switch'><span class='switch-title'>1946</span></li>
-              <li class='swiper-pagination-switch'><span class='switch-title'>1951</span></li>
-              <li class='swiper-pagination-switch last'><span class='switch-title'>1981</span></li>
-            </ul>
-            <!-- Progressbar -->
-            <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
           </div>
+          <!-- Timeline -->
+          <ul class="swiper-pagination-custom">
+            <li class='swiper-pagination-switch first active'><span class='switch-title'>1642</span></li>
+            <li class='swiper-pagination-switch'><span class='switch-title'>1822</span></li>
+            <li class='swiper-pagination-switch'><span class='switch-title'>1888</span></li>
+            <li class='swiper-pagination-switch'><span class='switch-title'>1940</span></li>
+            <li class='swiper-pagination-switch'><span class='switch-title'>1946</span></li>
+            <li class='swiper-pagination-switch'><span class='switch-title'>1951</span></li>
+            <li class='swiper-pagination-switch last'><span class='switch-title'>1981</span></li>
+          </ul>
+          <!-- Progressbar -->
+          <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
         </div>
       </div>
     </div>
@@ -130,38 +128,6 @@
         ←
     </button>
 
-    <!-- history page sections -->
-    <!-- <div class="hidden" id="history-sections">
-      <div id="y1642">
-        <h2>Pascaline</h2>
-        <img src="https://p1.liveauctioneers.com/364/40452/17377272_6_l.jpg" alt="">
-      </div>
-      <div id="y1822">
-        <h2>Analytical Engine</h2>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.britannica.com%2F31%2F172531-050-E009D42C%2Fportion-Charles-Babbage-Analytical-Engine-death-mill-1871.jpg&f=1&nofb=1&ipt=f91da7df5c87c0dc8e8d480910dbb7b339da5bbb0b0855a1350adbf4981a10cb&ipo=images" alt="">
-      </div>
-      <div id="y1888">
-        <h2>Masina de tabulare Holerith</h2>
-        <img src="https://i.pinimg.com/736x/07/a4/eb/07a4eb6e6f189b270eabd026998d86ce--card-reader-information-technology.jpg" alt="">
-      </div>
-      paccaline,analytical engine, masina de tabulare holerith, atanasoff-berry computer, eniax, univac 1, ibm pc
-      <div id="y1940">
-        <h2>Atanasoff-Berry Computer</h2>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs3.amazonaws.com%2Fs3.timetoast.com%2Fpublic%2Fuploads%2Fphotos%2F7000355%2Fasd.jpg&f=1&nofb=1&ipt=d195aea9f310c92dbd8ee8b76ac4af408382e2e81b2af7d210bc4a613404d640&ipo=images" alt="">
-      </div>
-      <div id="y1946">
-        <h2>ENIAC</h2>
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-OP9T9mDVoKM%2FUrSLp-LILrI%2FAAAAAAAAAZQ%2FPO_Y1nVRK38%2Fs1600%2FVacTubeComputer.jpg&f=1&nofb=1&ipt=0d680303e15ab2d02ad9fdd1d81030742da8c49feae3fc9c525a069223769193&ipo=images" alt="">
-      </div>
-      <div id="y1951">
-        <h2>UNIVAC I</h2>
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Fblog-media%2FHYGPU-102667576p-03-01.jpg&f=1&nofb=1&ipt=9064c3af8a179efdceacfd784ab914d75e990aa612fba09d72143fdd6c75323a&ipo=images&width=500&h=500" alt="">
-      </div>
-      <div id="y1981">
-        <h2>IBM PC</h2>
-        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.computerhistory.org%2Frevonline%2Fimages%2F102716228p-03-01.jpg%3Fw%3D600&f=1&nofb=1&ipt=d9ee6b30c5eab9bbee734cd9fa3b519c7e9c38c8902fe635ac7e2b2433b04b2f&ipo=images" alt="">
-      </div>
-    </div> -->
     <div id="components-page">
       <h1>COMPONENTE</h1>
       <div id="components-container">
@@ -170,7 +136,7 @@
       </div>
     </div>
 
-    <div id="components-list">
+    <div>
       <div id="processor" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908535.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1613616631374-121ea711cc3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=500" alt="">
@@ -220,8 +186,43 @@
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/6256/6256704.png" alt="">
       </div>
     </div>
+
     <div id="future-page">
       <h1>VIITOR</h1>
+      <div id="future-container">
+        <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
+          <!-- Swiper -->
+          <div class="swiper swiper-container swiper-container--timeline">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <span class="title">
+                  <h2>Calculatorul Quantic</h2>
+                  <p>În prezent, majoritatea calculatoarelor utilizează arhitectura von Neumann, care se bazează pe procesul secvențial de instrucțiuni și pe stocarea datelor în memorie. Cu toate acestea, calculatoarele cuantice se bazează pe proprietățile mecanice cuantice ale particulelor și pot efectua operațiuni în paralel, ceea ce le face mult mai rapide decât calculatoarele tradiționale.
+                    Calculatoarele cuantice au potențialul de a rezolva probleme care sunt imposibil de rezolvat cu calculatoarele tradiționale, cum ar fi simularea moleculelor sau a rețelelor de proteine. În viitor, este posibil ca acestea să fie utilizate în mod obișnuit în domenii precum cercetarea medicală sau dezvoltarea de noi materiale.
+                    Cu toate acestea, există și provocări legate de calculatoarele cuantice. Acestea sunt foarte sensibile la interferențe și erori și sunt dificil de construit și de menținut. În plus, utilizarea lor poate ridica și probleme de securitate.</p>
+                </span>
+              </div>
+              <div class="swiper-slide">
+                <span class="title">
+                  <h2>Realitatea virtuala si augmentata</h2>
+                  <p>alculatoarele cu dispozitive de realitate virtuală și augmentată. Aceste tehnologii permit utilizatorilor să experimenteze interacțiunea cu lumi virtuale, aducând o nouă dimensiune în utilizarea computerelor. De exemplu, jocurile video și simulările pot deveni mult mai realiste și interactive, oferind o experiență de neegalat. În plus, realitatea augmentată poate fi utilizată pentru a afișa informații suplimentare și a îmbunătăți înțelegerea unui anumit subiect sau obiect. Aceste tehnologii sunt în continuă dezvoltare, iar utilizarea lor se va extinde în multe domenii, inclusiv în educație, medicină și afaceri.</p>
+                </span>
+              </div>
+              <div class="swiper-slide history-slide">
+                <span class="title">
+                  <h2>Inteligenta Artificiala</h2>
+                  <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (IA). Această tehnologie se bazează pe utilizarea algoritmilor de învățare automată pentru a crea sisteme care pot simula inteligența umană. În viitor, este de așteptat ca calculatoarele să devină tot mai capabile să proceseze informații și să înțeleagă contextul, ceea ce ar putea duce la o revoluție în domeniul asistenței medicale, al roboților sau al transportului autonom.
+                    Cu toate acestea, există și provocări legate de utilizarea IA. De exemplu, există preocupări cu privire la utilizarea acesteia în mod incorect sau la dependența excesivă de tehnologie. În plus, există întotdeauna riscul ca aceste sisteme să fie programate să fie discriminatorii sau să perpetueze prejudecățile.</p>
+                  <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/83eb093f-d354-45de-b983-10ad4178874d.webp" alt="">
+                  <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/54a19762-7a63-4188-b05a-2a00d2219f67.webp" alt="">
+                </span>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
